[package]
name = "skpn-win"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
skia-safe = { version = "0.50.0", features = ["textlayout", "vulkan"] }
winit = { git = 'https://github.com/rust-windowing/winit.git' }
ash = { git = "https://github.com/ash-rs/ash.git", rev="79f63e1", version = "0.37", features = ["linked"] }
skulpin-renderer = {path="skulpin-renderer"}