[package]
name = "rafx-win"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
winit = '0.26.1'

# On macOS, first install the MoltenVK SDK from: https://vulkan.lunarg.com/sdk/home#mac
#
# Be sure to install an older 1.2.x version (since skulpin/skia currently has trouble with 1.3):
# https://sdk.lunarg.com/sdk/download/1.2.189.0/mac/vulkansdk-macos-1.2.189.0.dmg
#
skia-safe = { version = ">=0.52", features = ["textlayout", "vulkan"] }
skulpin = { git = "https://github.com/aclysma/skulpin.git", rev="c5fb342" }
