[package]
name = "skulpin-renderer"
version = "0.5.1"
authors = ["Philip Degarmo <aclysma@gmail.com>"]
edition = "2018"
description = "A vulkan renderer for skia, a component of skulpin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aclysma/skulpin"
homepage = "https://github.com/aclysma/skulpin"
keywords = ["skia", "vulkan", "ash", "2d", "graphics"]
categories = ["graphics", "gui", "multimedia", "rendering", "visualization"]

[dependencies]
skia-safe = { version = "0.50.0", features = ["textlayout", "vulkan"] }
ash = { git = "https://github.com/ash-rs/ash.git", rev="79f63e1", features = ["loaded"] }
raw-window-handle = "0.5"
log="0.4"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
raw-window-metal = { path="../raw-window-metal", version="0.2" }
